samples/_failures_safe/1761563993_54e593_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2ccdb48f.c: In function ‘main’:
./samples/SAFE/__tmp_2ccdb48f.c:153:5: error: expected expression at end of input
  153 |     matrix_init(&matB,
      |     ^~~~~~~~~~~
./samples/SAFE/__tmp_2ccdb48f.c:153:5: error: too few arguments to function ‘matrix_init’
./samples/SAFE/__tmp_2ccdb48f.c:45:6: note: declared here
   45 | void matrix_init(Matrix* mat, int rows, int cols) {
      |      ^~~~~~~~~~~
./samples/SAFE/__tmp_2ccdb48f.c:153:5: error: expected declaration or statement at end of input
  153 |     matrix_init(&matB,
      |     ^~~~~~~~~~~
